--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
+    "eslint-config-next": "^14.2.7",
     "leaflet": "^1.9.3",
-    "next": "13.4.1",
+    "next": "^14.2.7",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-kml": "^2.1.1",
     "tailwindcss": "3.3.2",
